fixed main content positioning and spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,30 +18,86 @@ body {
 }
 .wrapper {
   display: flex;
+  flex-direction: column;
   background-color: white;
-  height: 100vh;
+  height: 100%;
 }
 
 .img-container {
-  min-width: 500px;
+  height: 150px;
   position: relative;
 }
+
 img {
-  object-fit: fill;
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
 
 header {
   position: absolute;
-  top: 30%;
+  top: 10%;
   left: 0;
   background-color: rgba(0, 0, 0, 0.507);
   width: 100%;
-  height: 150px;
+  height: 100px;
   text-align: center;
 }
 
 header h1 {
   color: white;
+}
+
+main {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.top-content {
+  background-color: #c0c0c0;
+  height: 40%;
+}
+
+.form-content {
+  height: 40%;
+  background-color: blue;
+}
+
+.bottom-content {
+  height: 30%;
+  background-color: red;
+}
+
+@media only screen and (min-width: 900px) {
+  .wrapper {
+    flex-direction: row;
+  }
+
+  .img-container {
+    min-width: 500px;
+    height: 100vh;
+  }
+
+  header {
+    top: 30%;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.507);
+    height: 150px;
+  }
+
+  .top-content {
+    background-color: #c0c0c0;
+    height: 40%;
+  }
+
+  .form-content {
+    height: 40%;
+    background-color: blue;
+  }
+
+  .bottom-content {
+    height: 30%;
+    background-color: red;
+  }
 }
